Fix nav on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,12 @@ header {
       gap: 3ch;
       list-style: none;
       padding-inline-start: 0;
+
+      @media(max-width: 600px) {
+        font-size: 0.8em;
+        gap: 0;
+        justify-content: space-between;
+      }
     }
   }
 }
